sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:10: error: ')' expected but $XMLSTART$< found.
    while(k*ecart <i && !plusPetitQue(i-(k*ecart),v)  ){
                  ^AlgShellSort:10: error: illegal start of simple expression
    while(k*ecart <i && !plusPetitQue(i-(k*ecart),v)  ){
                                                      ^