sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var ecart = getNombreValeurs()/2.0
  while(ecart >0){
  var v=0
  var k=1
  for (i<-1 to getNombreValeurs()-1){
    
    v = getValeur(i)
    while(k*ecart <i && !plusPetitQue(i-(k*ecart),v)  ){
      copie(i-k*ecart,i-(k-1)*ecart)
      i
    }
   setValeur(i-(k-1)*ecart,v) 
  }
}
  }